# Plugin_Matter

./: Cargo.toml  README.md  REFACTORING_PLAN.md  build.rs
brushes/bristle_soft.pbrush/: config.json
brushes/round_hard.pbrush/: config.json
brushes/round_soft.pbrush/: config.json
brushes/square_flat.pbrush/: config.json
brushes/texture_rough.pbrush/: config.json
examples/: standalone.rs
src/: lib.rs  panel.rs  plugin.rs
src/brush_engine/: builtin.rs  config.rs  loader.rs  mask.rs  mod.rs  registry.rs  stamp.rs
src/canvas/: mod.rs  stroke.rs  viewport.rs
src/canvas/renderer/: canvas_renderer.rs  mod.rs  types.rs
src/canvas/renderer/shaders/: grid.wgsl  tile.wgsl
src/canvas/tools/: mod.rs
src/panels/: layers.rs  mod.rs  properties.rs
src/state/: commands.rs  document.rs  history.rs  mod.rs  tool_state.rs  viewport.rs
src/tools/: eraser.rs  eyedropper.rs  fill.rs  hand.rs  mod.rs  paint.rs
src/ui/: color_panel.rs  layer_panel.rs  mod.rs  toolbar.rs
