[package]
name = "plugin_matter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# GPUI Framework
gpui = { git = "https://github.com/Far-Beyond-Pulsar/WGPUI", rev = "53872e17a0e2f306ce4d9760ff2bdfa965b41337", package = "gpui-ce" }

# UI Components
ui = { path = "../WGPUI-Component/crates/ui" }
ui_common = { path = "../Pulsar-Native/ui-crates/ui_common" }

# PIF Image Format
pulsar_image_format = { git = "https://github.com/Far-Beyond-Pulsar/PIF-rs", rev = "c2cd8c4dfc49e12bebd76812308a7dda1f851452" }

# Graphics
wgpu = { git = "https://github.com/Far-Beyond-Pulsar/wgpu", rev = "fce5b80e8017304449124b12637ec324417e40c8", default-features = false, features = ["dx12", "vulkan", "wgsl", "metal"] }

# Utilities
anyhow = "1.0"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"

[build-dependencies]
rustc_version = "0.4"

[features]
plugin = []
