[package]
name = "plugin_matter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# GPUI Framework
gpui-ce = { git = "https://github.com/Far-Beyond-Pulsar/WGPUI", rev = "2abda4ffb8542aad150fa4ff9ebc7263997fd731" }
ui      = { git = "https://github.com/Far-Beyond-Pulsar/WGPUI-Component", rev = "0fd58bb40d2e94e02831a198b76e20527f0150df" }

# PIF Image Format
pulsar_image_format = { git = "https://github.com/Far-Beyond-Pulsar/PIF-rs", rev = "c2cd8c4dfc49e12bebd76812308a7dda1f851452" }

# Graphics
wgpu = { git = "https://github.com/Far-Beyond-Pulsar/wgpu", rev = "fce5b80e8017304449124b12637ec324417e40c8", default-features = false, features = ["dx12", "vulkan", "wgsl", "metal"] }

# Image decoding (PNG brush masks) — version pinned to match existing lock file
image = { version = "=0.25.10", default-features = false, features = ["png"] }

# SVG rasterisation for brush masks — version pinned to match existing lock file
resvg = "=0.47.0"

# Utilities
anyhow = "1.0"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"

[build-dependencies]
rustc_version = "0.4"

[features]
plugin = []
